--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -354,7 +354,8 @@ input[data-error]::after {
   transform: rotate(-45deg);
 }
 .btn-submit,
-.btn-signup {
+.btn-signup,
+.btn-close {
   background: #fe142f;
   display: block;
   margin: 0 auto;
